--- a/EmailsService/EmailsService/Web.config
+++ b/EmailsService/EmailsService/Web.config
@@ -21,4 +21,12 @@ http://msdn2.microsoft.com/en-us/library/b5ysx397.aspx
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+   <system.net>
+    <!--TODO 001. En el web config, configuramos los mail settings con el host, password, username y el port-->
+     <mailSettings>
+    <smtp>
+      <network host="smtp.sendgrid.net" password="ort12345" userName="azure_61e40289132203c43adee0c04e10a15a@azure.com" port="587" />
+    </smtp>
+  </mailSettings>
+</system.net>
 </configuration>
